fixed single game page resposivity, store responsiveness adjusted but not complete, only looks correct on mobile

--- a/client/src/components/Navigation/Navigation.module.css
+++ b/client/src/components/Navigation/Navigation.module.css
@@ -54,6 +54,10 @@
         justify-content: space-around;
         padding-inline-start: 0px;
     }
+
+    .navMenu a {
+        text-decoration: none;
+    }
     
     .navGreeting{
         flex: 100%;
